# TP_1-TOIA

./: CMakeLists.txt  README.md
data/: data_01.txt  data_02.txt  data_03.txt  data_04.txt  data_05.txt  data_06.txt
include/: BranchAndBound.h  LowerBounds.h  Problem.h
src/: BranchAndBound.cpp  LowerBound.cpp  main.cpp  problem.cpp
